feat: Intégration de Supabase pour la base de données
- Mise à jour de la configuration pour utiliser Supabase en production (Vercel).

--- a/.env.example
+++ b/.env.example
@@ -1,35 +1,72 @@
-# Configuration des Variables d'Environnement pour Jenny
-# Copiez ce fichier vers .env et remplissez les valeurs
+# Configuration Jenny - Variables d'Environnement
+# Copiez ce fichier vers .env et remplissez avec vos vraies valeurs
 
-# === CLÉS API ===
-# Clé API Google Generative AI (nécessaire)
-GOOGLE_API_KEY=votre_cle_google_api_ici
+# =========================
+# BASE DE DONNÉES RAILWAY
+# =========================
+# URL de connexion PostgreSQL Railway
+# Cette URL est fournie par Railway après création du projet
+DATABASE_PUBLIC_URL=postgresql://postgres:yuaQpQbaIgcrPCPSkqrgRVzHHDvdcHOz@ballast.proxy.rlwy.net:11685/railway
 
-# Clé API OpenRouter (optionnel, alternative à Google)
-OPENROUTER_API_KEY=votre_cle_openrouter_ici
+# =========================
+# CLÉS API IA
+# =========================
+# Clé API Google Gemini (pour les conversations)
+GOOGLE_API_KEY=votre_cle_google_gemini_aqui
 
-# Clé API getimg.ai (pour génération d'images)
-GETIMG_API_KEY=votre_cle_getimg_ici
+# Clé API OpenRouter (alternative sans censure)
+OPENROUTER_API_KEY=votre_cle_openrouter_aqui
 
-# === CONFIGURATION SENDGRID ===
-# Clé API SendGrid pour l'envoi d'emails
-# Créer un compte gratuit sur sendgrid.com (100 emails/jour gratuits)
-SENDGRID_API_KEY=votre_cle_sendgrid_ici
+# Clé API getimg.ai (génération d'images premium)
+GETIMG_API_KEY=votre_cle_getimg_aqui
 
-# Email d'expéditeur (doit être vérifié dans SendGrid)
-FROM_EMAIL=noreply@votre-domaine.com
+# =========================
+# EMAIL SERVICE (BREVO)
+# =========================
+# Mot de passe SMTP Brevo pour l'envoi de codes de vérification
+BREVO_SMTP_PASSWORD=votre_mot_de_passe_brevo_smtp
 
-# === CONFIGURATION FLASK ===
-SECRET_KEY=votre_secret_key_super_securise_ici
+# =========================
+# CONFIGURATION SÉCURITÉ
+# =========================
+# Clé secrète Flask (générez une clé unique en production)
+SECRET_KEY=votre_cle_secrete_flask_unique_ici
 
-# Environnement (development, production)
-FLASK_ENV=development
+# =========================
+# CONFIGURATION ENVIRONNEMENT
+# =========================
+# Indicateur pour Vercel (automatique sur Vercel)
+VERCEL=false
 
-# === BASE DE DONNÉES ===
-# SQLite par défaut (aucune configuration nécessaire)
+# Environnement Flask (development/production)
+FLASK_ENV=production
 
-# === NOTES POUR VERCEL ===
-# 1. Sur Vercel, ajoutez ces variables dans la section "Environment Variables"
-# 2. Pour SENDGRID_API_KEY: Créez un compte sur sendgrid.com
-# 3. Pour FROM_EMAIL: Vous devez vérifier le domaine dans SendGrid
-# 4. Les emails seront envoyés jusqu'à 100/jour avec le plan gratuit
+# =========================
+# NOTES DE CONFIGURATION
+# =========================
+# 
+# 1. RAILWAY POSTGRESQL:
+#    - Créez un projet sur https://railway.app
+#    - Ajoutez un service PostgreSQL
+#    - Copiez l'URL de connexion depuis le dashboard
+#
+# 2. CLÉS API:
+#    - Google: https://makersuite.google.com/app/apikey
+#    - OpenRouter: https://openrouter.ai/keys
+#    - getimg.ai: https://getimg.ai/dashboard
+#
+# 3. EMAIL BREVO:
+#    - Créez un compte sur https://brevo.com
+#    - Configurez SMTP dans les paramètres
+#    - Utilisez le mot de passe SMTP généré
+#
+# 4. VARIABLES VERCEL:
+#    - Ajoutez toutes ces variables dans Settings > Environment Variables
+#    - Assurez-vous que DATABASE_PUBLIC_URL est bien définie
+#    - Supprimez toutes les clés du code source
+#
+# 5. SÉCURITÉ:
+#    - NE jamais committer le fichier .env
+#    - Utilisez des clés uniques en production
+#    - rotación régulièrement vos clés API
+#
