feat: switch to Gemini 1.5 Pro for Premium and OpenAI for Free users

--- a/.env.example
+++ b/.env.example
@@ -17,6 +17,10 @@ GOOGLE_API_KEY=votre_cle_google_gemini_aqui
 # Clé API OpenRouter (alternative sans censure)
 OPENROUTER_API_KEY=votre_cle_openrouter_aqui
 
+# Clé API OpenAI (pour les utilisateurs Free)
+OPENAI_API_KEY=votre_cle_openai_aqui
+OPENAI_MODEL=gpt-3.5-turbo
+
 # Clé API getimg.ai (génération d'images premium)
 GETIMG_API_KEY=votre_cle_getimg_aqui
 
