chore: move hardcoded secrets to env vars

--- a/.env.example
+++ b/.env.example
@@ -25,16 +25,20 @@ OPENAI_MODEL=gpt-3.5-turbo
 GETIMG_API_KEY=votre_cle_getimg_aqui
 
 # =========================
-# EMAIL SERVICE (BREVO)
+# EMAIL SERVICE (SMTP)
 # =========================
-# Mot de passe SMTP Brevo pour l'envoi de codes de vérification
-BREVO_SMTP_PASSWORD=votre_mot_de_passe_brevo_smtp
+# Configuration SMTP pour l'envoi d'emails
+SMTP_USER=votre_utilisateur_smtp
+SMTP_PASSWORD=votre_mot_de_passe_smtp
 
 # =========================
 # CONFIGURATION SÉCURITÉ
 # =========================
 # Clé secrète Flask (générez une clé unique en production)
 SECRET_KEY=votre_cle_secrete_flask_unique_ici
+
+# Code secret pour passer Premium
+PREMIUM_CODE=Mine3472@
 
 # =========================
 # CONFIGURATION ENVIRONNEMENT
